--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,8 @@ env:
   RUN_CREATE_BAR: ${{ inputs.RUN_CREATE_BAR }}
   SERVER_NAME: ${{ secrets.SERVER_NAME }}
   OVERRIDE_PROPERTIES: ${{ secrets.OVERRIDE_PROPERTIES }}
-  CONNECTION_BROKER: ${{ secrets.IIB_DEVL_CONNECTION_BROKER }}
-  CONNECTION_BROKER_PASSWORD: ${{ secrets.IIB_DEVL_CONNECTION_BROKER_PASSWORD }}
-  CONNECTION_BROKER_PATH: ${{ secrets.IIB_DEVL_CONNECTION_BROKER_PATH }}
+  CONNECTION_BROKER: ${{ secrets.IIB_PROD_CONNECTION_BROKER }}
+  CONNECTION_BROKER2: ${{ secrets.IIB_PROD2_CONNECTION_BROKER }}
   PACKAGE_SCRIPT_PATH: ${{ secrets.IIB_PACKAGE_SCRIPT_PATH }}
   DEPLOY_SCRIPT_PATH: ${{ secrets.IIB_DEPLOY_SCRIPT_PATH }}
   CLEAN_SCRIPT_PATH: ${{ secrets.IIB_CLEAN_SCRIPT_PATH }}
@@ -51,11 +50,23 @@ jobs:
         run: |
           chmod +x $DEPLOY_SCRIPT_PATH 
           $DEPLOY_SCRIPT_PATH
+  deploy2:
+    runs-on: [self-hosted, linux, x64, BUS]
+    timeout-minutes: 5
+    needs: packageAndDeploy
+    environment: main2
+    steps:
+      - name: Realizar despliegue a IBM Integration Bus
+        run: |
+          chmod +x $DEPLOY_SCRIPT_PATH 
+          $DEPLOY_SCRIPT_PATH
+        env:
+          CONNECTION_BROKER: "$CONNECTION_BROKER2"
   clean:
     runs-on: [self-hosted, linux, x64, BUS]
     timeout-minutes: 5
     if: ${{ always() }}
-    needs: packageAndDeploy
+    needs: deploy2
     steps:
       - name: Remover directorio y archivos del respositorio
         run: |
