--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ on:
         description: 'Lista de propiedades que requieren hacer override al empaquetado bar'
         required: false
         type: string
+      REPLICAR:
+        description: 'Indica si el despliegue se replicara el los Nodos de Integración, (true or false)'
+        required: false
+        type: boolean
   
 env:
   PROJECT_NAME: ${{ inputs.PROJECT_NAME }}
@@ -30,11 +34,13 @@ env:
   RUN_CREATE_BAR: ${{ inputs.RUN_CREATE_BAR }}
   SERVER_NAME: ${{ inputs.SERVER_NAME }}
   OVERRIDE_PROPERTIES: ${{ inputs.OVERRIDE_PROPERTIES }}
+  REPLICAR: ${{ inputs.REPLICAR }}
   CONNECTION_BROKER: ${{ secrets.IIB_PROD_CONNECTION_BROKER }}
   CONNECTION_BROKER2: ${{ secrets.IIB_PROD2_CONNECTION_BROKER }}
   PACKAGE_SCRIPT_PATH: ${{ secrets.IIB_PACKAGE_SCRIPT_PATH }}
   DEPLOY_SCRIPT_PATH: ${{ secrets.IIB_DEPLOY_SCRIPT_PATH }}
   CLEAN_SCRIPT_PATH: ${{ secrets.IIB_CLEAN_SCRIPT_PATH }}
+  
 
 jobs:
   packageAndDeploy:
@@ -59,6 +65,7 @@ jobs:
           chmod +x $DEPLOY_SCRIPT_PATH 
           $DEPLOY_SCRIPT_PATH
   deploy2:
+    if: ${{ env.REPLICAR }}
     runs-on: [self-hosted, linux, x64, BUS]
     timeout-minutes: 5
     needs: packageAndDeploy
