--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -30,10 +30,10 @@ env:
   RUN_CREATE_BAR: ${{ inputs.RUN_CREATE_BAR }}
   SERVER_NAME: ${{ inputs.SERVER_NAME }}
   OVERRIDE_PROPERTIES: ${{ inputs.OVERRIDE_PROPERTIES }}
-  CONNECTION_BROKER: ${{ secrets.IIB_DEVL_CONNECTION_BROKER }}
-  PACKAGE_SCRIPT_PATH: ${{ secrets.IIB_PACKAGE_SCRIPT_PATH }}
-  DEPLOY_SCRIPT_PATH: ${{ secrets.IIB_DEPLOY_SCRIPT_PATH }}
-  CLEAN_SCRIPT_PATH: ${{ secrets.IIB_CLEAN_SCRIPT_PATH }}
+  CONNECTION_BROKER: ${{ secrets.INT_BUS_CONNECTION_BROKER_DEVL }}
+  PACKAGE_SCRIPT_PATH: ${{ secrets.INT_BUS_SCRIPT_PATH_PACKAGE }}
+  DEPLOY_SCRIPT_PATH: ${{ secrets.INT_BUS_SCRIPT_PATH_DEPLOY }}
+  CLEAN_SCRIPT_PATH: ${{ secrets.INT_BUS_SCRIPT_PATH_CLEAN }}
 
 jobs:
   packageAndDeploy:
